# kika

./: .env.sample  .gitignore  .readthedocs.yaml  ACE_PERTURBATION_MODIFICATIONS.md  ENDF_ACE_INTEGRATION_SUMMARY.md  README.md  debug_mg_coeffs.py  docs-requirements.txt  example_ace_perturbation_usage.py  pyproject.toml  start-dev.sh  start-docker.sh  stop-dev.sh  test_1.00e+00_3.00e+00.sdf  test_mg_mf34_changes.py  test_new_display.py
docs/source/: conf.py  index.rst  license.rst
examples/: Example_SDF_Data_1.00e+00_3.00e+00.sdf  Example_SDF_Dataset_1.00e+00_3.00e+00.sdf  _mctal_example.ipynb  endf_perturbation_example.py  input_test1_copy_pert_300000_26056.i  mat_parser.ipynb  mat_perturbator.ipynb  mat_test1_pert_300000_26056.i  mctal_parser.ipynb  modify_mf4_example.py  output_parser.ipynb  pert_generator.ipynb  pert_parser.ipynb  pertfile_example.i  quickstart.ipynb  sdf_files.ipynb  test_1.00e+00_3.00e+00.sdf  tutorial_PERTcards.ipynb  tutorial_input.ipynb  tutorial_mctal.ipynb  tutorial_sensitivity.ipynb
kika/: __init__.py  _config.py  _constants.py  _plot_settings.py  _utils.py  debug_logging.md
kika-desktop/: IMPLEMENTATION_SUMMARY.md  PLOTTING_SYSTEM.md  PROGRESS.md  README.md  TESTING_GUIDE.md  package.json
mcnpy/: __init__.py  _constants.py  _plot_settings.py  _utils.py  debug_logging.md
mcnpy_server/: README.md  app.py  start.sh
streamlit_app/: .env.example  .gitignore  CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KIKA.py  MIGRATION_README.md  README.md  app.py  fix_indent.py  install.sh  output  requirements.txt  run.sh  testing.ipynb
tests/: test_input_parsing.py  test_mat_parsing.py  test_materials.py  test_mctal_parsing.py  test_pert_parsing.py  test_sdf.py  test_serpent_perturbation_label.py
(+629 files in other folders)
