[tool.poetry]
name = "kika-nd"
version = "0.1.0"
description = "A comprehensive Python toolkit for nuclear data analysis, including MCNP input/output processing, sensitivity analysis, covariance handling, ACE file parsing, and ENDF data manipulation."
authors = ["Juan Antonio Monleon de la Lluvia <juanmonleon96@gmail.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/monleon96/kika"
repository = "https://github.com/monleon96/kika"
documentation = "https://kika.readthedocs.io"
readme = "README.md"
keywords = ["nuclear", "mcnp", "monte-carlo", "sensitivity", "endf", "ace", "covariance", "nuclear-data", "radiation-transport"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
packages = [{include = "kika"}]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
xarray = "^2025.3.0"
scipy = "^1.15.2"
pyarrow = "^20.0.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"
ipympl = "^0.9.7"
plotly = "^6.0.0"
nbformat = "^5.10.4"
twine = "^6.1.0"
scikit-learn = "^1.7.0"
xgboost = "^3.0.2"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.1"
myst-parser = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
